unpackaged/main/default/objects/Legal_Fees__c/Legal_Fees__c.object-meta.xml
<CustomObject>
    <description>Yearly Legal Fees created by customer. Only visible for Legal CSM</description>
    <label>Legal Fees</label>
    <nameField>
        <displayFormat>LF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>