unpackaged/main/default/objects/Legal_Fees__c/fields/Reason_for_protection_cost__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_protection_cost__c</fullName>
    <defaultValue>&quot;Abmahnkosten&quot;</defaultValue>
    <label>Reason for protection cost</label>
    <type>TextArea</type>
</CustomField>