unpackaged/main/default/objects/Legal_Fees__c/fields/Total_fees_this_year_del__c.field-meta.xml
<CustomField>
    <fullName>Total_fees_this_year_del__c</fullName>
    <label>Total fees this year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>