unpackaged/main/default/objects/Legal_Fees__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>should only contain the actual year (4 characters)</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>