unpackaged/main/default/objects/Legal_Fees__c/fields/Year_as_number__c.field-meta.xml
<CustomField>
    <fullName>Year_as_number__c</fullName>
    <formula>VALUE( Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year (as number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>