unpackaged/main/default/objects/Legal_Fees__c/validationRules/Only_Numbers_allowed_and_after_2018.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Numbers_allowed_and_after_2018</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISNUMBER( Year__c ) = true,  Year_as_number__c &gt;= 2018, Year_as_number__c &lt;=  YEAR(DATEVALUE(NOW()))), false, true)</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Please make this field:only contain numbers AND is later than or equal to 2018 AND is not later than this year</errorMessage>
</ValidationRule>